--- a/index.html
+++ b/index.html
@@ -3,13 +3,29 @@
 <head>
     <meta charset="utf-8">
     <title>To do</title>
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
 <body ng-app="todoApp">
-
-
-	<div hello-world></div>
-	<hello-world></hello-world>
-
+	<div class="container text-center">
+		<h1>My TODOs</h1>
+		<div ng-controller="mainCtrl" class="list">
+			<div class="row">
+				<div class="col-md-9">
+					<input type="checkbox">
+					<label class="editing-label">A sample todo!</label>
+					<input class="editing-label" type="text">
+				</div>
+				<div class="col-md-3">
+					<div class="actions" ng-controller="actionsCtrl">
+						<a href="" ng-click="edit()">edit</a>
+						<a href="" ng-click="save()">save</a>
+						<a href="" class="delete" ng-click="delete()">delete</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<script type="text/javascript" src="vendor/angular.min.js"></script>
 	<script type="text/javascript" src="scripts/app.js"></script>
