--- a/index.html
+++ b/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <title>To do</title>
-    <link rel="stylesheet" type="text/css" href="styles/main.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>To-Do List</title>
+
+	<link rel="stylesheet" type="text/css" href="styles/main.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
+
 <body ng-app="todoApp">
-	<div class="container text-center">
-		<h1>My TODOs</h1>
-		<div ng-controller="mainCtrl" class="list">
-			<div class="row">
-				<div class="col-md-9">
-					<input type="checkbox">
-					<label class="editing-label">A sample todo!</label>
-					<input class="editing-label" type="text">
+	<div class="container mt-5">
+		<h1 class="text-center">My To-Do List</h1>
+
+		<div ng-controller="actionsCtrl" class="list">
+			<div class="add text-center m-3">
+				<a href="" ng-click="add()" class="btn btn-success">+ New Task</a>
+			</div>
+			<div class="item row" ng-repeat="todo in todos" ng-init="todo.completed = false"
+				ng-class="{'item-editing': editing, 'completed': todo.completed}">
+
+				<div class="col-md-5 offset-3">
+					<input ng-model="todo.completed" type="checkbox">
+					<span ng-click="todo.completed = !todo.completed"></span>
+					<label ng-hide="editing" ng-click="editing = true" class="editing-label">{{todo.name}}</label>
+					<input ng-blur="editing = false" ng-show="editing"
+						ng-model="todo.name" class="editing-label" type="text">
 				</div>
-				<div class="col-md-3">
-					<div class="actions" ng-controller="actionsCtrl">
-						<a href="" ng-click="edit()">edit</a>
-						<a href="" ng-click="save()">save</a>
-						<a href="" class="delete" ng-click="delete()">delete</a>
-					</div>
+				<div class="col-md-3 actions">
+					<a href="" ng-click="delete(todo, $index)" class="delete">delete</a>
 				</div>
 			</div>
 		</div>
@@ -29,6 +38,8 @@
 
 	<script type="text/javascript" src="vendor/angular.min.js"></script>
 	<script type="text/javascript" src="scripts/app.js"></script>
-	<script type="text/javascript" src="scripts/hello-world.js"></script>
+	<script src="scripts/controllers/main.js"></script>
+	<script src="scripts/services/data.js"></script>
 </body>
+
 </html>
