--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>To-Do List</title>
 
 	<link rel="stylesheet" type="text/css" href="styles/main.css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
 </head>
 
 <body ng-app="todoApp">
